syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc CancelOrder (CancelRequest) returns (OrderResponse);
}

message OrderRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CancelRequest {
  string order_id = 1;
}

message OrderResponse {
  string status = 1;
}
