syntax = "proto3";

package payment;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
  rpc RefundPayment (RefundRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string order_id = 1;
  float amount = 2;
}

message RefundRequest {
  string order_id = 1;
}

message PaymentResponse {
  string status = 1;
}
